Week 1 - SOLID Principles/solid/src/main/java/org/example/SRP/good/IMailer.java
package org.example.SRP.good;

public interface IMailer {
    void send(Message message);
}
