Week 1 - SOLID Principles/solid/src/main/java/org/example/SRP/bad/IMailer.java
package org.example.SRP.bad;

public interface IMailer {
    void send(Message message);
}
